@@ -24,7 +24,6 @@ import static org.matsim.contrib.drt.fare.DrtFareHandler.PERSON_MONEY_EVENT_REFE
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
@@ -52,41 +51,40 @@ import org.matsim.contrib.dvrp.passenger.PassengerRequestRejectedEvent;
 import org.matsim.contrib.dvrp.passenger.PassengerRequestRejectedEventHandler;
 import org.matsim.contrib.dvrp.passenger.PassengerRequestScheduledEvent;
 import org.matsim.contrib.dvrp.passenger.PassengerRequestScheduledEventHandler;
+import org.matsim.contrib.dvrp.passenger.PassengerWaitingEvent;
+import org.matsim.contrib.dvrp.passenger.PassengerWaitingEventHandler;
 
 import com.google.common.base.Preconditions;
+import com.google.common.base.Verify;
 
 /**
- * Creates PerformedRequestEventSequence (for scheduled requests) and RejectedRequestEventSequence (for rejected requests).
- * Almost all data for request/leg analysis is there (except info on actual paths), so should be quite reusable.
+ * Creates PerformedRequestEventSequence (for scheduled requests) and
+ * RejectedRequestEventSequence (for rejected requests). Almost all data for
+ * request/leg analysis is there (except info on actual paths), so should be
+ * quite reusable.
+ *
+ * Without prebooking, the order of sequences is always the same: First the
+ * agent *departs* then the request is *submitted*, then it is *rejected* or
+ * picked up. With prebooking, the order of departure and submission can be
+ * reversed: An agent first submits the request, and only later departs on the
+ * leg. Since *departure* is core MATSim, the respective event has no
+ * information about the request identifier. It could now happen that two
+ * submission with same characteristics have been submitted (person id, origin
+ * id). Then it is not clear which request belongs to the current departure. For
+ * that purpose the PassengerWaiting event has been introduced which is fired
+ * right after a departure has been processed by a DRT-related PassengerEngine.
+ * This events allows to link the latest departure of an agent to a request id.
  *
  * @author jbischoff
  * @author Michal Maciejewski
+ * @author Sebastian Hörl (sebhoerl), IRT SystemX
  */
 public class DrtEventSequenceCollector
 		implements PassengerRequestRejectedEventHandler, PassengerRequestScheduledEventHandler,
-		DrtRequestSubmittedEventHandler, PassengerPickedUpEventHandler, PassengerDroppedOffEventHandler,
+		DrtRequestSubmittedEventHandler, PassengerWaitingEventHandler, PassengerPickedUpEventHandler, PassengerDroppedOffEventHandler,
 		PersonMoneyEventHandler, PersonDepartureEventHandler {
 
 	public static class EventSequence {
-
-		public final static class PersonEvents {
-			private PersonDepartureEvent departure;
-			private PassengerPickedUpEvent pickup;
-			private PassengerDroppedOffEvent dropoff;
-
-			public PersonDepartureEvent getDeparture() {
-				return departure;
-			}
-
-			public PassengerPickedUpEvent getPickup() {
-				return pickup;
-			}
-
-			public PassengerDroppedOffEvent getDropoff() {
-				return dropoff;
-			}
-
-		}
 		private final DrtRequestSubmittedEvent submitted;
 
 		@Nullable
@@ -94,7 +92,12 @@ public class DrtEventSequenceCollector
 		@Nullable
 		private PassengerRequestRejectedEvent rejected;
 
-		private final Map<Id<Person>, PersonEvents> personEvents = new HashMap<>();
+		@Nullable
+		private PersonDepartureEvent departure;
+		@Nullable
+		private PassengerPickedUpEvent pickedUp;
+		@Nullable
+		private PassengerDroppedOffEvent droppedOff;
 		@Nullable
 		private List<PersonMoneyEvent> drtFares = new LinkedList<>();
 
@@ -102,16 +105,14 @@ public class DrtEventSequenceCollector
 			this.submitted = Objects.requireNonNull(submitted);
 		}
 
-		public EventSequence(Id<Person> personId, PersonDepartureEvent departure, DrtRequestSubmittedEvent submitted,
+		public EventSequence(PersonDepartureEvent departure, DrtRequestSubmittedEvent submitted,
 				PassengerRequestScheduledEvent scheduled, PassengerPickedUpEvent pickedUp,
-							 PassengerDroppedOffEvent droppedOff, List<PersonMoneyEvent> drtFares) {
+				PassengerDroppedOffEvent droppedOff, List<PersonMoneyEvent> drtFares) {
 			this.submitted = Objects.requireNonNull(submitted);
 			this.scheduled = scheduled;
-			PersonEvents personEvents = new PersonEvents();
-			personEvents.departure = departure;
-			personEvents.pickup = pickedUp;
-			personEvents.dropoff = droppedOff;
-			this.personEvents.put(personId, personEvents);
+			this.departure = departure;
+			this.pickedUp = pickedUp;
+			this.droppedOff = droppedOff;
 			this.drtFares = new ArrayList<>(drtFares);
 		}
 
@@ -127,16 +128,24 @@ public class DrtEventSequenceCollector
 			return Optional.ofNullable(rejected);
 		}
 
-		public Map<Id<Person>, PersonEvents> getPersonEvents() {
-			return Map.copyOf(personEvents);
+		public Optional<PersonDepartureEvent> getDeparture() {
+			return Optional.ofNullable(departure);
+		}
+
+		public Optional<PassengerPickedUpEvent> getPickedUp() {
+			return Optional.ofNullable(pickedUp);
+		}
+
+		public Optional<PassengerDroppedOffEvent> getDroppedOff() {
+			return Optional.ofNullable(droppedOff);
 		}
 
 		public List<PersonMoneyEvent> getDrtFares() {
-			return List.copyOf(drtFares);
+			return Collections.unmodifiableList(drtFares);
 		}
 
 		public boolean isCompleted() {
-			return personEvents.values().stream().allMatch(e -> e.dropoff != null);
+			return droppedOff != null;
 		}
 	}
 
@@ -145,8 +154,8 @@ public class DrtEventSequenceCollector
 	private final Map<Id<Request>, EventSequence> sequences = new HashMap<>();
 	private final List<PersonMoneyEvent> drtFarePersonMoneyEvents = new ArrayList<>();
 
-	private final Map<Id<Person>, List<EventSequence>> sequencesWithoutDepartures = new HashMap<>();
-	private final Map<Id<Person>, List<PersonDepartureEvent>> departuresWithoutSequence = new HashMap<>();
+	private final Map<Id<Person>, PersonDepartureEvent> latestDepartures = new HashMap<>();
+	private final Map<Id<Request>, PersonDepartureEvent> waitingForSubmission = new HashMap<>(); 
 
 	public DrtEventSequenceCollector(String mode) {
 		this.mode = mode;
@@ -166,6 +175,8 @@ public class DrtEventSequenceCollector
 	public Map<Id<Request>, EventSequence> getPerformedRequestSequences() {
 		return sequences.entrySet().stream() //
 				.filter(e -> e.getValue().getRejected().isEmpty()) //
+				.filter(e -> e.getValue().getDeparture().isPresent()) //
+				.filter(e -> e.getValue().getPickedUp().isPresent()) //
 				.collect(Collectors.toMap(e -> e.getKey(), e -> e.getValue()));
 	}
 
@@ -177,8 +188,8 @@ public class DrtEventSequenceCollector
 	public void reset(int iteration) {
 		sequences.clear();
 		drtFarePersonMoneyEvents.clear();
-		sequencesWithoutDepartures.clear();
-		departuresWithoutSequence.clear();
+		latestDepartures.clear();
+		waitingForSubmission.clear();
 	}
 
 	@Override
@@ -186,46 +197,42 @@ public class DrtEventSequenceCollector
 		if (event.getMode().equals(mode)) {
 			EventSequence sequence = new EventSequence(event);
 			sequences.put(event.getRequestId(), sequence);
-
-
-			List<PersonDepartureEvent> departures = new ArrayList<>();
-			for (Id<Person> person : event.getPersonIds()) {
-				PersonDepartureEvent departureEvent = popDepartureForSubmission(event, person);
-				departures.add(departureEvent);
-				sequence.personEvents.put(person, new EventSequence.PersonEvents());
-			}
-
-			if (departures.isEmpty()) {
-				// We have a submitted request, but no departure events yet (i.e. a prebooking). We start the
-				// sequence and note down the person ids to fill in the departure event later on.
-				for (Id<Person> person : event.getPersonIds()) {
-					sequence.personEvents.put(person, new EventSequence.PersonEvents());
-					sequencesWithoutDepartures.computeIfAbsent(person, id -> new LinkedList<>()).add(sequence);
-				}
-			} else {
-				for (PersonDepartureEvent departure : departures) {
-					sequence.personEvents.get(departure.getPersonId()).departure = departure;
-				}
-			}
+			
+			// if we already have a departure
+			sequence.departure = waitingForSubmission.remove(event.getRequestId());
 		}
 	}
 
 	@Override
 	public void handleEvent(PersonDepartureEvent event) {
 		if (event.getLegMode().equals(mode)) {
-			EventSequence sequence = popSequenceForDeparture(event);
-
-			if (sequence == null) {
-				// We have a departure event, but no submission yet (i.e. and instant booking).
-				// We note down the departure event here to recover it later when the submission
-				// is down (usually right after).
-				departuresWithoutSequence.computeIfAbsent(event.getPersonId(), id -> new LinkedList<>()).add(event);
-			} else {
-				sequence.personEvents.get(event.getPersonId()).departure = event;
-			}
+			// note down the departure event here, for now we don't know which request it
+			// belongs to, see below
+			Preconditions.checkState(!latestDepartures.containsKey(event.getPersonId()),
+					"Attempt to register a departure event for " + mode + " and person " + event.getPersonId()
+							+ ", but there is still a departure that has not been consumed");
+			latestDepartures.put(event.getPersonId(), event);
 		}
 	}
 
+	@Override
+	public void handleEvent(PassengerWaitingEvent event) {
+		if (event.getMode().equals(mode)) {
+			// must exist, otherwise something is wrong
+			PersonDepartureEvent departureEvent = Objects.requireNonNull(latestDepartures.remove(event.getPersonId()));
+
+			EventSequence sequence = sequences.get(event.getRequestId());
+			if (sequence != null) {
+				// prebooked request, we already have the submission
+				Verify.verifyNotNull(sequence.submitted);
+				sequence.departure = departureEvent;
+			} else {
+				// immediate request, submission event should come soon
+				waitingForSubmission.put(event.getRequestId(), departureEvent);
+			}
+		}
+	}
+	
 	@Override
 	public void handleEvent(PassengerRequestScheduledEvent event) {
 		if (event.getMode().equals(mode)) {
@@ -243,14 +250,14 @@ public class DrtEventSequenceCollector
 	@Override
 	public void handleEvent(PassengerPickedUpEvent event) {
 		if (event.getMode().equals(mode)) {
-			sequences.get(event.getRequestId()).personEvents.get(event.getPersonId()).pickup = event;
+			sequences.get(event.getRequestId()).pickedUp = event;
 		}
 	}
 
 	@Override
 	public void handleEvent(PassengerDroppedOffEvent event) {
 		if (event.getMode().equals(mode)) {
-			sequences.get(event.getRequestId()).personEvents.get(event.getPersonId()).dropoff = event;
+			sequences.get(event.getRequestId()).droppedOff = event;
 		}
 	}
 
@@ -272,73 +279,5 @@ public class DrtEventSequenceCollector
 				sequence.drtFares.add(event);
 			}
 		}
-	}
-
-	/*
-	 * This function is helper that finds a PersonDepartureEvent for a given
-	 * DrtRequestSubmittedEvent. This means that the departure has happened before
-	 * submission, which is the usually case for instant requests.
-	 */
-	private PersonDepartureEvent popDepartureForSubmission(DrtRequestSubmittedEvent event, Id<Person> person) {
-		List<PersonDepartureEvent> potentialDepartures = departuresWithoutSequence.get(person);
-		PersonDepartureEvent result = null;
-
-		if (potentialDepartures != null) {
-			Iterator<PersonDepartureEvent> iterator = potentialDepartures.iterator();
-
-			while (iterator.hasNext()) {
-				PersonDepartureEvent departureEvent = iterator.next();
-
-				if (event.getFromLinkId().equals(departureEvent.getLinkId())) {
-					if (result != null) {
-						throw new IllegalStateException(
-								"Ambiguous matching between submission and departure - not sure how to solve this");
-					}
-
-					iterator.remove();
-					result = departureEvent;
-				}
-			}
-
-			if (potentialDepartures.size() == 0) {
-				departuresWithoutSequence.remove(person);
-			}
-		}
-
-		return result;
-	}
-
-	/*
-	 * This function is helper that finds a sequence given a PersonDepartureEvent.
-	 * This means that a sequence has started (the request has been submitted)
-	 * before the agent has departed, i.e. this is a pre-booking of some sort.
-	 */
-	private EventSequence popSequenceForDeparture(PersonDepartureEvent event) {
-		EventSequence result = null;
-		List<EventSequence> potentialSequences = sequencesWithoutDepartures.get(event.getPersonId());
-
-		if (potentialSequences != null) {
-			Iterator<EventSequence> iterator = potentialSequences.iterator();
-
-			while (iterator.hasNext()) {
-				EventSequence sequence = iterator.next();
-
-				if (sequence.submitted.getFromLinkId().equals(event.getLinkId())) {
-					if (result != null) {
-						throw new IllegalStateException(
-								"Ambiguous matching between submission and departure - not sure how to solve this");
-					}
-
-					iterator.remove();
-					result = sequence;
-				}
-			}
-
-			if (potentialSequences.size() == 0) {
-				sequencesWithoutDepartures.remove(event.getPersonId());
-			}
-		}
-
-		return result;
 	}
 }
